Added contact link to index.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
         <title>Helping Hands For All Creatures Great And Small</title>
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="icon" href="media/Favicon---Helping-Hands.ico" type="image/x-icon">
+        <link
+            rel="icon"
+            href="media/Favicon---Helping-Hands.ico"
+            type="image/x-icon"
+        />
 
         <link
             href="https://unpkg.com/@csstools/normalize.css"
@@ -136,7 +140,10 @@
                 <hr />
                 <p class="message">
                     Want to know more about us? Visit our
-                    <a href="details.html">details page</a>.
+                    <a href="details.html"
+                        >details page; or
+                        <a href="contact.html">contact us</a>.</a
+                    >.
                 </p>
                 <hr />
             </section>
