Fixed contact us link.

--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
                 <hr />
                 <p class="message">
                     Want to know more about us? Visit our
-                    <a href="details.html">details page; or</a>
-                    <a href="contact.html">contact us</a>..
+                    <a href="details.html">details page</a>; or
+                    <a href="contact.html">contact us</a>.
                 </p>
                 <hr />
             </section>
