Edited contact email in intro.

--- a/contact.html
+++ b/contact.html
@@ -32,8 +32,8 @@
                 <div class="container">
                     <p>
                         We'd love to hear from you. You can either email us at
-                        <em>serve[at]helpinghandsforall.net</em>, or fill out
-                        the form below and submit.
+                        <em>serve@helpinghandsforall.net</em>, or fill out the
+                        form below and submit.
                     </p>
                     <br /><br />
                     <form
