Commented out nav section in index.

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     -->
 
         <section id="hero">
-            <nav>
-                <!-- <a class="navlink" href="contact.html">Contact</a>
-            <a class="navlink" href="details.html">Details</a> -->
-            </nav>
+            <!-- <nav>
+                <a class="navlink" href="contact.html">Contact</a>
+            <a class="navlink" href="details.html">Details</a>
+            </nav> -->
             <h1 id="herocopy">
                 Helping Hands For All Creatures Great And Small
             </h1>
