Now things are a bit messy with nav styles.

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
         <!-- This inspiration for this: https://websitedemos.net/heritage-hotel-04/ -->
 
         <section id="hero2">
-            <nav>
+            <nav id="navcontact">
                 <a class="navlink" href="/">Home</a>
                 <!-- <a class="navlink" href="#">About</a> -->
             </nav>
