Added title to contact area but <p> alignment needs fixing.

--- a/index.html
+++ b/index.html
@@ -110,7 +110,10 @@
                 being the
                 <strong>Helping Hands for All Creatures Great And Small!</strong>
             </p>
+            <br>
             <hr />
+            <br>
+                <h1>Contact Us</h1>
             <div class="cform">
                 <p>
                     We'd love to hear from you. You can either email us at <em>serve@helpinghandsforall.net</em>, or fill out the form below and submit.
