--- a/index.html
+++ b/index.html
@@ -61,59 +61,43 @@
         <section class="content">
             <h1>What We Do</h1>
             <p>
-                We are
-                <strong>Helping Hands For All Creatures Great And Small</strong>; a
-                GOD directed nonprofit that is here to create real transformation of
-                the heart. Our organization has a simple goal; to help people,
-                animals, and nature in need. On a global scale. This will be achieved
-                by working directly with individuals and collaborating with other
-                nonprofits to accomplish amazing things.
+                We are<strong>Helping Hands For All Creatures Great And Small</strong>; a GOD directed nonprofit that is here to create real transformation of the heart. Our organization has a simple goal; to help people, animals, and nature in need. On a global scale. This will be achieved by working directly with individuals and collaborating with other nonprofits to accomplish amazing things.
             </p>
 
             <p>
-                It may sound like too big a task, but this is coming from the only ONE
-                who can make anything happen. GOD HIMSELF!
+                It may sound like too big a task, but this is coming from the only ONE who can make anything happen. GOD HIMSELF!
             </p>
 
             <p>What will your donation achieve?</p>
             <ul>
                 <li>
-                    It will help people in need, be it homeless families, single
-                    parents, orphans, mentally ill, and more.
+                    It will help people in need, be it homeless families, single parents, orphans, mentally ill, and more.
                 </li>
 
                 <li>
-                    We will create an animal rescue to help animals in need and find
-                    them loving homes.
+                    We will create an animal rescue to help animals in need and find them loving homes.
                 </li>
 
                 <li>
-                    We will also help nature by cleaning up public areas such as
-                    beaches, wild life areas, and communities.
+                    We will also help nature by cleaning up public areas such as beaches, wild life areas, and communities.
                 </li>
             </ul>
 
             <p>
-                But that's just the beginning. We will also raise funds for other
-                nonprofits that are doing GOD's work. Specifically, nonprofits that
-                are overlooked by public grants and other organizations.
+                But that's just the beginning. We will also raise funds for other nonprofits that are doing GOD's work. Specifically, nonprofits that are overlooked by public grants and other organizations.
             </p>
 
             <p>
-                If you're donating money, pray and ask GOD how much you should give.
-                If you want to donate supplies, provide resources, and/or volunteer,
-                please email us at serve@helpinghandsforall.net.
+                If you're donating money, pray and ask GOD how much you should give. If you want to donate supplies, provide resources, and/or volunteer, please email us at serve@helpinghandsforall.net.
             </p>
 
             <p>
-                Let's come together and love our neighbors the way GOD intended, by
-                being the
-                <strong>Helping Hands for All Creatures Great And Small!</strong>
+                Let's come together and love our neighbors the way GOD intended, by being the <strong>Helping Hands for All Creatures Great And Small!</strong>
             </p>
             <br>
             <hr />
             <br>
-                <h1>Contact Us</h1>
+            <h1>Contact Us</h1>
             <div class="cform">
                 <p>
                     We'd love to hear from you. You can either email us at <em>serve@helpinghandsforall.net</em>, or fill out the form below and submit.
@@ -135,8 +119,6 @@
 
                     <input type="text" name="_honey" style="display: none" />
 
-                    <!-- <input type="hidden" name="_captcha" value="false"> -->
-                    <!-- Form by https://formsubmit.co -->
                 </form>
             </div>
         </section>
@@ -152,6 +134,7 @@
             </p>
             <hr />
         </section>
+
         <section class="content footer">
             <p class="legal">
                 Copyright © 2022 Helping Hands For All Creatures Great And Small, Inc.
