--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
     <section id="main">
         <section class="card">
             <img id="logo" src="media/helping-hands-placeholder-sm.png" alt="" />
-            <p>Be a part of something big! Donate and get involved.</p>
+            <!-- <p>Be a part of something big! Donate and get involved.</p> -->
+            <p>We're in the initial stages of our amazing journey. <a href="contact.html">Join us!</a></p>
             <a class="btn" target="_blank" rel="noopener"><button id="donate">
                     &nbsp;&nbsp; Donate &nbsp;&nbsp;
                 </button></a>
