Edited contact us page.

--- a/contact.html
+++ b/contact.html
@@ -18,10 +18,10 @@
     <!-- This inspiration for this: https://websitedemos.net/heritage-hotel-04/ -->
 
     <section id="hero2">
-        <nav id="navcontact">
+        <!-- <nav id="navcontact">
             <a class="navlink" href="/">Home</a>
             <!-- <a class="navlink" href="#">About</a> -->
-        </nav>
+        </nav> -->
         <h1 id="herocopy">Contact Us</h1>
     </section>
 
@@ -57,6 +57,10 @@
     </section>
 
         <section class="content">
+            <hr />
+            <p class="message">
+                Learn more on our <a href="details.html">details page</a> or return <a href="/">home</a>.
+            </p>
             <hr />
         </section>
 
