--- a/details.html
+++ b/details.html
@@ -5,15 +5,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="icon" href="media/Favicon---Helping-Hands.ico" type="image/x-icon">
-        <link rel="stylesheet" href="details.css" />
+        <link rel="stylesheet" href="css/details.css" />
         <title>Details</title>
     </head>
 
     <body>
         <div id="anchor"></div>
         <section id="hero2">
-
-            </nav> -->
             <h1 id="herocopy">Details</h1>
         </section>
         <section class="container">
@@ -181,7 +179,7 @@
             <p>Fifth Board Member,<br />Pending</p>
             <p>Frank J. Quinones,<br />Co-Founder, Executive Director</p>
             <button class="button-13b">Back to Top</button> &nbsp;
-            <button class="button-13" role="button">Home</button> &nbsp;
+            <button class="button-13c" role="button">Home</button> &nbsp;
             <button class="button-13c" role="button">Contact</button>
         </section>
 
