--- a/details.html
+++ b/details.html
@@ -179,7 +179,7 @@
             <p>Fifth Board Member,<br />Pending</p>
             <p>Frank J. Quinones,<br />Co-Founder, Executive Director</p>
             <button class="button-13b">Back to Top</button> &nbsp;
-            <button class="button-13c" role="button">Home</button> &nbsp;
+            <button class="button-13" role="button">Home</button> &nbsp;
             <button class="button-13c" role="button">Contact</button>
         </section>
 
