Added disbled style to the Donate button.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <img id="logo" src="media/helping-hands-placeholder-sm.png" alt="" />
             <!-- <p>Be a part of something big! Donate and get involved.</p> -->
             <p>We're in the initial stages of our amazing journey. <a href="contact.html">Join us!</a></p>
-            <a class="btn" target="_blank" rel="noopener"><button id="donate">
+            <a class="btn" target="_blank" rel="noopener"><button disabled id="donate">
                     &nbsp;&nbsp; Donate &nbsp;&nbsp;
                 </button></a>
         </section>
