Updated board members.

--- a/details.html
+++ b/details.html
@@ -174,9 +174,9 @@
             <h1>Board of Directors</h1>
 
             <p>Alisha M. Fredrickson,<br />Co-Founder, Program Director</p>
-            <p>Timothy G. Pipkorn,<br />Financial Director</p>
-            <p>Fourth Board Member,<br />Pending</p>
-            <p>Fifth Board Member,<br />Pending</p>
+            <p>Financial Director,<br />Pending</p>
+            <p>President,<br />Pending</p>
+            <p>Secretary,<br />Pending</p>
             <p>Frank J. Quinones,<br />Co-Founder, Executive Director</p>
             <button class="button-13b">Back to Top</button> &nbsp;
             <button class="button-13" role="button">Home</button> &nbsp;
