Edits to board listing.

--- a/details.html
+++ b/details.html
@@ -173,11 +173,11 @@
 
             <h1>Board of Directors</h1>
 
-            <p>Alisha M. Fredrickson,<br />Co-Founder, Program Director</p>
+            <p>Alisha M. Fredrickson,<br />Co-Founder / Program Director</p>
             <p>Financial Director, (Pending)</p>
             <p>President, (Pending)</p>
             <p>Secretary, (Pending)</p>
-            <p>Frank J. Quinones,<br />Co-Founder, Executive Director</p>
+            <p>Frank J. Quinones,<br />Co-Founder / Executive Director</p>
             <button class="button-13b">Back to Top</button> &nbsp;
             <button class="button-13" role="button">Home</button> &nbsp;
             <button class="button-13c" role="button">Contact</button>
