--- a/details.html
+++ b/details.html
@@ -174,9 +174,9 @@
             <h1>Board of Directors</h1>
 
             <p>Alisha M. Fredrickson,<br />Co-Founder / Program Director</p>
-            <p>Financial Director, (Pending)</p>
-            <p>President, (Pending)</p>
-            <p>Secretary, (Pending)</p>
+            <p>Financial Director, (Open Position)</p>
+            <p>President, (Open Position)</p>
+            <p>Secretary, (Open Position)</p>
             <p>Frank J. Quinones,<br />Co-Founder / Executive Director</p>
             <button class="button-13b">Back to Top</button> &nbsp;
             <button class="button-13" role="button">Home</button> &nbsp;
