Getting a little closer to what I want.

--- a/details.html
+++ b/details.html
@@ -178,9 +178,33 @@
             <p>President, (Open Position)</p>
             <p>Secretary, (Open Position)</p>
             <p>Frank J. Quinones,<br />Co-Founder / Executive Director</p>
-            <button class="button-13b">Back to Top</button> &nbsp;
+            <!-- <button class="button-13b">Back to Top</button> &nbsp;
             <button class="button-13" role="button">Home</button> &nbsp;
-            <button class="button-13c" role="button">Contact</button>
+            <button class="button-13c" role="button">Contact</button> -->
+        </section>
+
+<section class="content">
+            <hr />
+            <p class="message">
+                Want to know more about us? Visit our
+                <a href="details.html">details page</a>; or
+                <a href="contact.html">contact us</a>.
+            </p>
+            <hr />
+        </section>
+        <section class="content footer">
+            <p class="legal">
+                Copyright © 2022 Helping Hands For All Creatures Great And
+                Small, Inc. All rights reserved.
+            </p>
+            <p class="legal credit">
+                <span>Photo by
+                    <a href="https://unsplash.com/@yansphotobook?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank" rel="noopener">Yannis H</a>
+                    on <a href="https://unsplash.com/">Unsplash</a></span>
+            </p>
+            <!-- <p class="legal">Copyright © 2022 Helping Hands For All Creatures Great And Small, Inc. All rights reserved.</p>
+            <p class="legal credit"><span>Photo by <a href="https://unsplash.com/@editholic7?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank" rel="noopener">Kunal Shinde</a> on <a href="https://unsplash.com" target="_blank" rel="noopener">Unsplash</a></span>
+            </p> -->
         </section>
 
         <script>
