--- a/details.html
+++ b/details.html
@@ -178,20 +178,16 @@
             <p>President, (Open Position)</p>
             <p>Secretary, (Open Position)</p>
             <p>Frank J. Quinones,<br />Co-Founder / Executive Director</p>
-            <!-- <button class="button-13b">Back to Top</button> &nbsp;
-            <button class="button-13" role="button">Home</button> &nbsp;
-            <button class="button-13c" role="button">Contact</button> -->
 
             <section class="content">
                 <hr />
                 <p class="message">
-                    Want to know more about us? Visit our
-                    <a href="details.html">details page</a>; or
+                    You can go <a href="details.html">back to top</a>,  <a href="/">home</a>, or
                     <a href="contact.html">contact us</a>.
                 </p>
                 <hr />
             </section>
-            <section class="content footer">
+            <section class="footer">
                 <p class="legal">
                     Copyright © 2022 Helping Hands For All Creatures Great And
                     Small, Inc. All rights reserved.
@@ -206,40 +202,6 @@
 
 
 
-        <script>
-            // Retrieve all elements with the class name "button-13"
-            var buttons = document.getElementsByClassName("button-13");
 
-
-            // Loop through each element in the HTMLCollection
-            for (var i = 0; i < buttons.length; i++) {
-                // Add a click event listener to each element
-                buttons[i].addEventListener("click", function () {
-                    // Navigate to "index.html" when the button is clicked
-                    window.location.href = "index.html";
-                });
-            }
-
-var buttons = document.getElementsByClassName("button-13c");
-
-// Loop through each element in the HTMLCollection
-for (var i = 0; i < buttons.length; i++) {
-    // Add a click event listener to each element
-    buttons[i].addEventListener("click", function () {
-        // Navigate to "index.html" when the button is clicked
-        window.location.href = "contact.html";
-    });
-}
-
-
-
-            var buttons = document.getElementsByClassName("button-13b");
-            buttons[0].addEventListener("click", function () {
-                var anchorElement = document.getElementById("anchor");
-                anchorElement.scrollIntoView({
-                    behavior: "smooth",
-                });
-            });
-        </script>
     </body>
 </html>
