The back to top scroll is working but I want to improve it.

--- a/details.html
+++ b/details.html
@@ -182,8 +182,7 @@
             <section class="content">
                 <hr />
                 <p class="message">
-                    You can go <a href="details.html">back to top</a>,  <a href="/">home</a>, or
-                    <a href="contact.html">contact us</a>.
+                    You can go <a href="#top" onclick="window.scrollTo({top: 0, behavior: 'smooth'});">back to top</a>,  <a href="/">home</a>, or <a href="contact.html">contact us</a>.
                 </p>
                 <hr />
             </section>
@@ -191,11 +190,6 @@
                 <p class="legal">
                     Copyright © 2022 Helping Hands For All Creatures Great And
                     Small, Inc. All rights reserved.
-                </p>
-                <p class="legal credit">
-                    <span>Photo by
-                        <a href="https://unsplash.com/@yansphotobook?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank" rel="noopener">Yannis H</a>
-                        on <a href="https://unsplash.com/">Unsplash</a></span>
                 </p>
             </section>
         </section>
