--- a/contact.html
+++ b/contact.html
@@ -65,12 +65,12 @@
                 Copyright © 2022 Helping Hands For All Creatures Great And
                 Small, Inc. All rights reserved.
             </p>
-            <p class="legal credit">
+            <!-- <p class="legal credit">
                 <span>Photo by
                     <a href="https://unsplash.com/@editholic7?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank" rel="noopener">Kunal Shinde</a>
                     on
                     <a href="https://unsplash.com" target="_blank" rel="noopener">Unsplash</a></span>
-            </p>
+            </p> -->
         </section>
     </section>
 </body>
