Apple icon code.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="media/Favicon---Helping-Hands.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" sizes="128x128" href="media/Favicon---Helping-Hands.ico" type="image/x-icon" />
 
     <link href="https://unpkg.com/@csstools/normalize.css" rel="stylesheet" />
 
